Ajuste listado de preinscritos

--- a/PAESP/Views/Preinscripcion/index.cshtml
+++ b/PAESP/Views/Preinscripcion/index.cshtml
@@ -5,8 +5,8 @@
 
 @section scripts{
 
-    <script src="~/Scripts/ListaPreinscripcion.js" type="module"></script>
-
+   <script src="~/Scripts/ListaPreinscripcion.js" type="module"></script>
+   
 }
 
 
@@ -28,7 +28,7 @@
                                 <tr>
                                     <th>Nombres</th>
                                     <th>Apellidos</th>
-                                    <th>Apellidos</th>
+                                    <th>Tipo Id</th>
                                     <th>Identificación</th>
                                     <th>Email</th>
                                     <th>Ciudad</th>
