--- a/PAESP/Views/Shared/_Layout.cshtml
+++ b/PAESP/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link href="~/css/layout.css" rel="stylesheet" />
     <link href="~/css/icons/icomoon/styles.min.css" rel="stylesheet" />
     <link href="~/css/icons/fontawesome/styles.min.css" rel="stylesheet" />
+
+
 </head>
 <body>
 
@@ -555,6 +557,9 @@
     </footer>
     <script src="~/js/main/jquery.min.js"></script>
     <script src="~/js/main/bootstrap.bundle.min.js"></script>
+    <script src="~/js/plugins/tables/datatables/datatables.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
+
 </html>
