formulario de incripcioon

--- a/PAESP/Views/Preinscripcion/Agregar.cshtml
+++ b/PAESP/Views/Preinscripcion/Agregar.cshtml
@@ -30,9 +30,9 @@
                         <div class="col-sm-4">
                             <select class="form-control" id="txtTipoIdentificacion" name="txtTipoIdentificacion">
                                 <option value="">Seleccione el tipo de identificación</option>
-                                <option value="01">Cedula de ciudadania</option>
-                                <option value="02">Tarjeta de identidad</option>
-                                <option value="03">Cedula extranjera</option>
+                                <option value="CC">Cedula de ciudadania</option>
+                                <option value="TI">Tarjeta de identidad</option>
+                                <option value="CE">Cedula extranjera</option>
                             </select>
 
                         </div>
