Agredado modelos y otras configuraciones

--- a/PAESP/Views/Shared/_Layout.cshtml
+++ b/PAESP/Views/Shared/_Layout.cshtml
@@ -558,6 +558,13 @@
     <script src="~/js/main/jquery.min.js"></script>
     <script src="~/js/main/bootstrap.bundle.min.js"></script>
     <script src="~/js/plugins/tables/datatables/datatables.min.js"></script>
+    <script src="~/js/plugins/pickers/pickadate/picker.js"></script>
+    <script src="~/js/plugins/pickers/pickadate/legacy.js"></script>
+    <script src="~/js/plugins/pickers/pickadate/picker.date.js"></script>
+    <script src="~/js/plugins/pickers/pickadate/picker.time.js"></script>
+    <script src="~/js/plugins/pickers/pickadate/translation/es_ES.js"></script>
+    <script src="~/js/plugins/pickers/color/i18n/"></script>
+    <script src="~/scripts/Utilidades.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
