--- a/PAESP/Views/Preinscripcion/Agregar.cshtml
+++ b/PAESP/Views/Preinscripcion/Agregar.cshtml
@@ -28,13 +28,7 @@
                     <div class="form-group row">
                         <label for="" class="col-sm-2 control-label">Tipo de identificacion</label>
                         <div class="col-sm-4">
-                            <select class="form-control" id="txtTipoIdentificacion" name="txtTipoIdentificacion">
-                                <option value="">Seleccione el tipo de identificación</option>
-                                <option value="CC">Cedula de ciudadania</option>
-                                <option value="TI">Tarjeta de identidad</option>
-                                <option value="CE">Cedula extranjera</option>
-                            </select>
-
+                            <select class="form-control" id="txtTipoIdentificacion" name="txtTipoIdentificacion"></select>
                         </div>
                     </div>
 
@@ -75,7 +69,18 @@
                             <input type="text" class="form-control" id="txtCiudad" name="txtCiudad" />
                         </div>
                     </div>
-
+                    <div class="form-group row">
+                        <label for="" class="col-sm-2 control-label">Concepto</label>
+                        <div class="col-sm-4">
+                            <select class="form-control" id="txtConcepto" name="txtConcepto"></select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="" class="col-sm-2 control-label">Puntaje Icfes</label>
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control" id="txtIcfes" name="txtIcfes" />
+                        </div>
+                    </div>
 
                 </form>
 
