estructura para guardar preinscripcion

--- a/PAESP/Views/Preinscripcion/index.cshtml
+++ b/PAESP/Views/Preinscripcion/index.cshtml
@@ -16,7 +16,15 @@
         <div class="card border-0 shadow-none">
 
             <div class="card-header">
-                <h2> Listado de Preinscriptos </h2>
+                <div class="row justify-content-between">
+                    <div class="col-lg-6">
+                        <h2> Listado de Preinscriptos </h2>
+                    </div>
+                    <div class="col-lg-6 text-right">
+                        <button type="button" class="btn btn-primary" id="btnAplicarPago">Aplicar Pagos</button>
+                    </div>
+                </div>
+                
             </div>
 
             <div class="card-body p-1">
