reporte Preinscripcion ajustes

--- a/PAESP/Views/Preinscripcion/index.cshtml
+++ b/PAESP/Views/Preinscripcion/index.cshtml
@@ -26,24 +26,41 @@
             </div>
 
             <div class="card-body p-1">
+            
+                <div class="tabs">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="nav nav-tabs nav-tabs-solid bg-teal-400 border-0 nav-justified">
+                                <li class="nav-item"><a href="#pendientes" class="nav-link active" data-toggle="tab" id="tab_pendiente">Pendientes de pago</a></li>
+                                <li class="nav-item"><a href="#pago" class="nav-link" data-toggle="tab" id="tab_pagos">Con pago</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tab-content">
 
-                <div class="row">
-                    <div class="col-lg-12">
-                        <table class="table table-bordered  table-striped table-xs" style="background-color: #FFF;" id="table_preinscripcion">
-                            <thead style="background-color: #004b87; color: #fff;">
-                                <tr>
-                                    <th>Nombres</th>
-                                    <th>Apellidos</th>
-                                    <th>Tipo Id</th>
-                                    <th>Identificación</th>
-                                    <th>Email</th>
-                                    <th>Ciudad</th>
-                                    <th>Telefono</th>                                                            
-                                </tr>
-                            </thead>
-                        </table>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <table class="table table-bordered  table-striped table-xs" style="background-color: #FFF;" id="table_preinscripcion">
+                                    <thead style="background-color: #004b87; color: #fff;">
+                                        <tr>
+                                            <th>Nombres</th>
+                                            <th>Apellidos</th>
+                                            <th>Tipo Id</th>
+                                            <th>Identificación</th>
+                                            <th>Email</th>
+                                            <th>Ciudad</th>
+                                            <th>Telefono</th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+
+                        </div>
+
+
                     </div>
                 </div>
+             
 
             </div>
         </div>
