--- a/PAESP/Views/CalendarioAcademico/Index.cshtml
+++ b/PAESP/Views/CalendarioAcademico/Index.cshtml
@@ -60,7 +60,12 @@
                             <input type="text" class="form-control" id="txtAcademicYear" name="txtAcademicYear" />
                         </div>
                     </div>
-
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-2">Adjunto</label>
+                        <div class="col-sm-5">
+                            <input type="file" class="form-control-uniform" data-fouc>
+                        </div>
+                    </div>
                 </form>
                 
             </div>
