--- a/PAESP/Views/Shared/_Layout.cshtml
+++ b/PAESP/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
 
                 <li class="nav-item dropdown">
                     <a href="#" class="navbar-nav-link" data-toggle="dropdown">
-                        <i class="icon-pulse2"></i>
+                        <i class="icon-archive"></i>
                         <span class="d-lg-none ml-3">Activity</span>
                         <span class="badge badge-mark border-warning ml-auto ml-lg-0"></span>
                     </a>
@@ -230,15 +230,15 @@
         <div class="overflow-auto overflow-lg-visible scrollbar-hidden flex-1">
             <ul class="navbar-nav flex-row text-nowrap">
                 <li class="nav-item">
-                    <a href="index.html" class="navbar-nav-link active">
+                    <a href="/" class="navbar-nav-link active">
                         <i class="icon-home4 mr-2"></i>
                         Home
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="index.html" class="navbar-nav-link active">
-                        <i class="icon-home4 mr-2"></i>
+                    <a href="/GrupoProfesor/Index" class="navbar-nav-link active">
+                        <i class="icon-archive mr-2"></i>
                         Grupos
                     </a>
                 </li>
@@ -254,11 +254,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @*<footer class="border-top footer bottom text-muted">
         <div class="container">
             &copy; 2021 - PAESP - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer>*@
     <script src="~/js/main/jquery.min.js"></script>
     <script src="~/js/main/bootstrap.bundle.min.js"></script>
     <script src="~/js/plugins/tables/datatables/datatables.min.js"></script>
