Listo el registro de notas

--- a/PAESP/Views/Public/Login.cshtml
+++ b/PAESP/Views/Public/Login.cshtml
@@ -39,6 +39,21 @@
 </head>
 
 <body>
+
+    <div class="navbar navbar-expand navbar-light px-0 px-lg-3">
+        <div class="overflow-auto overflow-lg-visible scrollbar-hidden flex-1">
+            <ul class="navbar-nav flex-row text-nowrap">
+                <li class="nav-item">
+                    <a href="/Preinscripcion/Agregar" class="navbar-nav-link active">
+                        <i class="icon-home4 mr-2"></i>
+                        Inscripciones
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+
     <div class="page-content">
         <div class="content-wrapper">
             <div class="content-inner">
